salesforce/force-app/main/default/objects/Agentforce_Config__c/Agentforce_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for the Agentforce REST API co-pilot integration. Stores Connected App credentials and Agent ID.</description>
    <label>Agentforce Config</label>
</CustomObject>