salesforce/force-app/main/default/objects/Agentforce_Config__c/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <description>The Agentforce Agent ID (from Einstein AI Agent setup)</description>
    <label>Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>