salesforce/force-app/main/default/objects/Agentforce_Config__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Connected App Consumer Key for Agentforce API OAuth</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>