salesforce/force-app/main/default/objects/Agentforce_Config__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Connected App Consumer Secret for Agentforce API OAuth</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>