salesforce/force-app/main/default/objects/Agentforce_Config__c/fields/Clientelling_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Clientelling_Agent_Id__c</fullName>
    <description>The Agentforce Agent ID for the Clientelling Copilot agent</description>
    <label>Clientelling Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>